# FastAPI_RAG

./: .gitignore  README.md  main.py  pyproject.toml
app/: app.py  db.py  schemas.py
app/utils/: chunking.py  customRAG.py  embeddings.py  rag_service.py  redis_memory.py
